--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -62,3 +62,15 @@ repos:
       - id: terragrunt_validate #- Validates all Terragrunt configuration files.
       - id: checkov #- Runs checkov on Terraform templates.
       - id: terrascan #- Runs terrascan on Terraform templates.
+
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.931
+    hooks:
+      - id: mypy
+        args: [--config-file setup.cfg]
+
+  - repo: https://github.com/pycqa/flake8
+    rev: '4.0.1'
+    hooks:
+      - id: flake8
+        args: [--config-file setup.cfg]
