--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -82,6 +82,7 @@ repos:
         description: This hook pytest
         language: system
         entry: pytest
+        always_run: true #(optional: default false) if true this hook will run even if there are no matching files.
         verbose: true #(optional) if true, forces the output of the hook to be printed even when the hook passes. new in 1.6.0.
         stages: [manual] #(optional: default (all stages)) confines the hook to the commit, merge-commit, push, prepare-commit-msg, commit-msg, post-checkout, post-commit, post-merge, post-rewrite, or manual stage.
         pass_filenames: false
